--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Lincoln hack project 2018",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.15.2",
     "gulp-browserify": "^0.5.1",
     "socket.io": "^2.1.1"
